[package]
edition = "2024"
name = "cliffa"
version = "0.0.11"

[dependencies]
ctrlc = {version = "3.5.2", features = ["termination"]}# Sync version for handling termination signals.
rustc-hash = "2.1.2" # Fast hash map.
serde = {version = "1.0.228", features = ["derive"]}# Serialization and deserialization.
serde_json = "1.0.149" # Json support.
tracing = "0.1.44" # Logging library.
tracing-subscriber = "=0.3.19" # Log into terminal. tbd: version "0.3.20" has a bug with ansi symbols https://github.com/tokio-rs/tracing/issues/3369

[dev-dependencies]
chrono = {version = "0.4.44", features = ["serde"]}# Date and time.
